// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Steps Trigger async dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Label\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Label\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Label\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Label\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async json 1`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json 2`] = `
Object {
  "steps": Array [
    Object {
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json 3`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "key": "_0",
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "key": "_1",
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "key": "_2",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async mutate 1`] = `
"steps:
  - trigger: another
    label: Label
    async: true
"
`;

exports[`buildkite-graph Steps Trigger async mutate 2`] = `
"steps:
  - trigger: another
    label: Label
"
`;

exports[`buildkite-graph Steps Trigger async mutate 3`] = `
"steps:
  - trigger: another
    async: true
"
`;

exports[`buildkite-graph Steps Trigger async structure 1`] = `"* Label"`;

exports[`buildkite-graph Steps Trigger async structure 2`] = `"* Label"`;

exports[`buildkite-graph Steps Trigger async structure 3`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger async yaml 1`] = `
"steps:
  - trigger: another
    label: Label
    async: true
"
`;

exports[`buildkite-graph Steps Trigger async yaml 2`] = `
"steps:
  - trigger: another
    label: Label
"
`;

exports[`buildkite-graph Steps Trigger async yaml 3`] = `
"steps:
  - trigger: another
    async: true
"
`;

exports[`buildkite-graph Steps Trigger async yaml_depends_on 1`] = `
"steps:
  - trigger: another
    label: Label
    key: _0
    async: true
"
`;

exports[`buildkite-graph Steps Trigger async yaml_depends_on 2`] = `
"steps:
  - trigger: another
    label: Label
    key: _1
"
`;

exports[`buildkite-graph Steps Trigger async yaml_depends_on 3`] = `
"steps:
  - trigger: another
    key: _2
    async: true
"
`;

exports[`buildkite-graph Steps Trigger build dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 5`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build json 1`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "env": Object {
          "ANOTHER_KEY": "VALUE",
          "KEY": "VALUE",
        },
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 2`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "branch": "rease-bla",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 3`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "commit": "c0ffee",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 4`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "message": "My messge",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 5`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "meta_data": Object {
          "release-version": "1.1",
          "some-other": "value",
        },
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "env": Object {
          "ANOTHER_KEY": "VALUE",
          "KEY": "VALUE",
        },
      },
      "key": "_0",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "branch": "rease-bla",
      },
      "key": "_1",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "commit": "c0ffee",
      },
      "key": "_2",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json_depends_on 4`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "message": "My messge",
      },
      "key": "_3",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json_depends_on 5`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "meta_data": Object {
          "release-version": "1.1",
          "some-other": "value",
        },
      },
      "key": "_4",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build mutate 1`] = `
"steps:
  - trigger: another
    build:
      env:
        KEY: VALUE
        ANOTHER_KEY: VALUE
"
`;

exports[`buildkite-graph Steps Trigger build mutate 2`] = `
"steps:
  - trigger: another
    build:
      branch: rease-bla
"
`;

exports[`buildkite-graph Steps Trigger build mutate 3`] = `
"steps:
  - trigger: another
    build:
      commit: c0ffee
"
`;

exports[`buildkite-graph Steps Trigger build mutate 4`] = `
"steps:
  - trigger: another
    build:
      message: My messge
"
`;

exports[`buildkite-graph Steps Trigger build mutate 5`] = `
"steps:
  - trigger: another
    build:
      meta_data:
        release-version: '1.1'
        some-other: value
"
`;

exports[`buildkite-graph Steps Trigger build structure 1`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger build structure 2`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger build structure 3`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger build structure 4`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger build structure 5`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger build yaml 1`] = `
"steps:
  - trigger: another
    build:
      env:
        KEY: VALUE
        ANOTHER_KEY: VALUE
"
`;

exports[`buildkite-graph Steps Trigger build yaml 2`] = `
"steps:
  - trigger: another
    build:
      branch: rease-bla
"
`;

exports[`buildkite-graph Steps Trigger build yaml 3`] = `
"steps:
  - trigger: another
    build:
      commit: c0ffee
"
`;

exports[`buildkite-graph Steps Trigger build yaml 4`] = `
"steps:
  - trigger: another
    build:
      message: My messge
"
`;

exports[`buildkite-graph Steps Trigger build yaml 5`] = `
"steps:
  - trigger: another
    build:
      meta_data:
        release-version: '1.1'
        some-other: value
"
`;

exports[`buildkite-graph Steps Trigger build yaml_depends_on 1`] = `
"steps:
  - trigger: another
    key: _0
    build:
      env:
        KEY: VALUE
        ANOTHER_KEY: VALUE
"
`;

exports[`buildkite-graph Steps Trigger build yaml_depends_on 2`] = `
"steps:
  - trigger: another
    key: _1
    build:
      branch: rease-bla
"
`;

exports[`buildkite-graph Steps Trigger build yaml_depends_on 3`] = `
"steps:
  - trigger: another
    key: _2
    build:
      commit: c0ffee
"
`;

exports[`buildkite-graph Steps Trigger build yaml_depends_on 4`] = `
"steps:
  - trigger: another
    key: _3
    build:
      message: My messge
"
`;

exports[`buildkite-graph Steps Trigger build yaml_depends_on 5`] = `
"steps:
  - trigger: another
    key: _4
    build:
      meta_data:
        release-version: '1.1'
        some-other: value
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another-build]\\" [ color = \\"grey\\" ];
}

  \\"another-build\\" [ shape =Msquare ];
  \\"[trigger another-build]\\" -> \\"another-build\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another-build]\\" [ color = \\"grey\\" ];
}

  \\"another-build\\" [ shape =Msquare ];
  \\"[trigger another-build]\\" -> \\"another-build\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json 1`] = `
Object {
  "steps": Array [
    Object {
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json 2`] = `
Object {
  "steps": Array [
    Object {
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "key": "_0",
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "key": "_1",
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline mutate 1`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline mutate 2`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline structure 1`] = `"* [trigger another-build]"`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline structure 2`] = `"* [trigger another-build]"`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml 1`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml 2`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml_depends_on 1`] = `
"steps:
  - trigger: another-build
    key: _0
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml_depends_on 2`] = `
"steps:
  - trigger: another-build
    key: _1
"
`;

exports[`buildkite-graph Steps Trigger limit branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger limit branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "master",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger limit branches json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "master",
      "key": "_0",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger limit branches mutate 1`] = `
"steps:
  - trigger: another
    branches: master
"
`;

exports[`buildkite-graph Steps Trigger limit branches structure 1`] = `"* [trigger another]"`;

exports[`buildkite-graph Steps Trigger limit branches yaml 1`] = `
"steps:
  - trigger: another
    branches: master
"
`;

exports[`buildkite-graph Steps Trigger limit branches yaml_depends_on 1`] = `
"steps:
  - trigger: another
    branches: master
    key: _0
"
`;

exports[`buildkite-graph Steps Trigger with a label dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Trigger another pipeline\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Trigger another pipeline\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger with a label json 1`] = `
Object {
  "steps": Array [
    Object {
      "label": "Trigger another pipeline",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger with a label json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "key": "_0",
      "label": "Trigger another pipeline",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger with a label mutate 1`] = `
"steps:
  - trigger: another
    label: Trigger another pipeline
"
`;

exports[`buildkite-graph Steps Trigger with a label structure 1`] = `"* Trigger another pipeline"`;

exports[`buildkite-graph Steps Trigger with a label yaml 1`] = `
"steps:
  - trigger: another
    label: Trigger another pipeline
"
`;

exports[`buildkite-graph Steps Trigger with a label yaml_depends_on 1`] = `
"steps:
  - trigger: another
    label: Trigger another pipeline
    key: _0
"
`;
